@@ -21,7 +21,7 @@
 
 	    <p>
 	    <ul>
-	      <li><a href="http://www.new.facebook.com/pages/OpenFlightsorg/35055397017">Facebook</a>
+	      <li><a href="http://www.new.facebook.com/pages/OpenFlightsorg/35055397017">Facebook</a> (see also the <a href="http://apps.facebook.com/openflights/">OpenFlights app for Facebook</a>)
 	      <li><a href="http://identi.ca/openflights">Identi.ca</a>
 	      <li><a href="http://twitter.com/openflights">Twitter</a>
 	    </ul>
