@@ -111,6 +111,8 @@
 	    <p>Point them to <b>http://openflights.org/user/<i>yourname</i></b>.  You can also click on <input type="button" value="Settings" align="middle"> when logged in to find your address; this is particularly useful if your name has spaces or unusual characters.</p>
 	    <p>Example: <a href="http://openflights.org/user/jpatokal">http://openflights.org/user/jpatokal</a></p>
 
+	    <p>If you have an account on <a href="http://facebook.com">Facebook</a>, you can also install the <a href="http://apps.facebook.com/openflights">OpenFlights Facebook app</a>, which can upload your key stats to your Facebook profile and notify your friends when you add new flights.</p>
+
 	    <h4>Can my friends also edit my flights?</h4>
 
 	    <p>Yes, <i>if</i> you give them your password.  You'd better trust them though, since they can now change all your settings and even delete your flights.  While the system does not <i>officially</i> support being logged in as the same user from many places at once, in practice this is <i>unlikely</i> to cause problems.</h4>
