@@ -1,3 +1,8 @@
+<b>2009-01-21</b>
+
+* Facebook application released
+* Facebook link status visible in Settings
+
 <b>2009-01-19</b>
 
 * Pressing "ENTER" after password submits log in form.
